--- a/src/main/resources/quickfixj-client.cfg
+++ b/src/main/resources/quickfixj-client.cfg
@@ -17,7 +17,7 @@ UseJDBCLogger=Y
 JdbcUser=postgres
 JdbcPassword=nurrony
 JdbcDriver=org.postgresql.Driver
-JdbcURL=jdbc:postgresql://localhost/fix_oms?currentSchema=client
+JdbcURL=jdbc:postgresql://localhost/fix_oms
 JdbcLogEventTable=fix_event_log
 JdbcSessionIdDefaultPropertyValue=NULL
 JdbcStoreMessagesTableName=fix_messages
